adding some more information about this

--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
 <a name="kilobolt_game" class="anchor" href="#kilobolt_game"><span class="octicon octicon-link"></span></a>kilobolt_game</h1>
 
 <p>Java Applet created from following Kilobolt tutorial</p>
+<p>It is a little robot that can jump arround, and two happy looking enemies that only appear on the first screen</p>
+<h2> Screenshot: <h2>
+<img src="./images/kilobot_screenshot.png" alt="Kilobolt Game"/>
       </section>
+      <!-- Where the actual applet will be (fingers crossed, it actually never worked...) -->
+      <section>
+        <object type="application/x-java-applet" classid="java:KiloboltGame.class" height="800" width="480">
+          <param name="code" value="Kilobolt" />
+          <param name="archive" value="KiloboltGame.jar" />
+          <param name="java_arguments" value="-Djnlp.packEnabled=true"/>
+        </object>
+      </section>
+
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
